# evm-iterator

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs
src/account/: keypair.rs  mnemonic.rs  mod.rs
src/config/: config.rs  evms.yaml
src/evm/: mod.rs  my_wallet.rs
src/evm/account/: keypair.rs  mnemonic.rs  mod.rs
src/evms/: erc20.rs  eth.rs  interator.rs  mod.rs
src/iter/: account_generator.rs  evm_handler.rs  mod.rs
src/iterator/: handler.rs  mod.rs  wallet_interator.rs
