[package]
name = "evm-iterator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", default-features = false, features = ["legacy"] }
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
serde_json = "1.0.111"
anyhow = "1"
